[package]
name = "merge-jwl"
version = "0.1.0"
authors = ["abdon-copper <59224618+abdon-copper@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.5.6", default-features = false, features = ["deflate"] }
sha2 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rusqlite]
#path = "../rusqlite/"
# FIXME: Wait for pull-request to be merged
git = "https://github.com/abdon-gadgets/rusqlite.git"
features = ["bundled", "deserialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies.rusqlite]
git = "https://github.com/abdon-gadgets/rusqlite.git"
features = ["bundled", "deserialize", "wasm32-wasi-vfs"]

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
opt-level = 3
lto = true
